--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "minimist": "^1.2.0"
+    "front-matter": "^3.0.1",
+    "handlebars": "^4.0.12",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
+    "showdown": "^1.9.0"
   }
 }
