--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "yass",
-  "version": "0.0.1",
-  "description": "Yet Another Static Site Generator - Zero Config Static Site Generator",
-  "main": "src/index.js",
-  "repository": "git@github.com:asleepysamurai/yass-gen.git",
-  "author": "Balaganesh Damodaran <asleepysamurai@gmail.com>",
-  "license": "MIT",
-  "private": true,
-  "dependencies": {
-    "front-matter": "^3.0.1",
-    "handlebars": "^4.0.12",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "showdown": "^1.9.0"
-  }
+    "name": "yass",
+    "version": "0.0.1",
+    "description": "Yet Another Static Site Generator - Zero Config Static Site Generator",
+    "main": "src/index.js",
+    "repository": "git@github.com:asleepysamurai/yass-gen.git",
+    "author": "Balaganesh Damodaran <asleepysamurai@gmail.com>",
+    "license": "MIT",
+    "private": true,
+    "dependencies": {
+        "front-matter": "^3.0.1",
+        "handlebars": "^4.0.12",
+        "minimist": "^1.2.0",
+        "mkdirp": "^0.5.1",
+        "showdown": "^1.9.0"
+    },
+    "bin": {
+        "yass": "./src/index.js"
+    }
 }
