--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "front-matter": "^3.0.1",
         "handlebars": "^4.0.12",
+        "html-minifier": "^3.5.21",
         "minimist": "^1.2.0",
         "mkdirp": "^0.5.1",
         "showdown": "^1.9.0"
