--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
         "showdown": "^1.9.0"
     },
     "bin": {
-        "yass": "./src/index.js"
+        "yass-gen": "./src/index.js"
     }
 }
